--- a/LatentSync.ipynb
+++ b/LatentSync.ipynb
@@ -5459,7 +5459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5911,7 +5911,7 @@
         "id": "t0fOMU7dZ4Qx",
         "outputId": "06ccaeff-d614-4fc4-c73e-9bb9e587fc77"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5941,48 +5941,73 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title\n",
-        "#UI for Colab\n",
+        "import torchaudio\n",
+        "from moviepy.editor import VideoFileClip, concatenate_videoclips, vfx\n",
+        "\n",
+        "def convert_video_to_25fps(video_path, output_path=\"temp_25fps.mp4\"):\n",
+        "    clip = VideoFileClip(video_path)\n",
+        "    clip = clip.set_fps(25)\n",
+        "    clip.write_videofile(output_path, codec=\"libx264\", fps=25, audio_codec=\"aac\")\n",
+        "    return output_path\n",
+        "\n",
+        "def convert_video_to_fps(video_path, , fps=25, output_path=\"temp_fps.mp4\"):\n",
+        "    if fps == 25:\n",
+        "        return\n",
+        "    clip = VideoFileClip(video_path)\n",
+        "    clip = clip.set_fps(fps)\n",
+        "    clip.write_videofile(output_path, codec=\"libx264\", fps=25, audio_codec=\"aac\")\n",
+        "    return output_path\n",
+        "\n",
+        "def trim_video(video_path, target_duration):\n",
+        "    clip = VideoFileClip(video_path).subclip(0, target_duration)\n",
+        "    trimmed_video_path = \"trimmed_video.mp4\"\n",
+        "    clip.write_videofile(trimmed_video_path, codec=\"libx264\", audio_codec=\"aac\")\n",
+        "    return trimmed_video_path\n",
+        "\n",
+        "def extend_video(video_path, target_duration):\n",
+        "    clip = VideoFileClip(video_path)\n",
+        "    original_duration = clip.duration\n",
+        "    clips = [clip]\n",
+        "\n",
+        "    while sum(c.duration for c in clips) < target_duration:\n",
+        "        reversed_clip = clip.fx(vfx.time_mirror)\n",
+        "        clips.append(reversed_clip if len(clips) % 2 == 1 else clip)\n",
+        "\n",
+        "    final_clip = concatenate_videoclips(clips, method=\"compose\")\n",
+        "    final_clip = final_clip.subclip(0, target_duration)\n",
+        "    extended_video_path = \"extended_video.mp4\"\n",
+        "    final_clip.write_videofile(extended_video_path, codec=\"libx264\", audio_codec=\"aac\")\n",
+        "    return extended_video_path\n",
+        "\n",
+        "def pad_audio_to_multiple_of_16(audio_path, target_fps=25):\n",
+        "    waveform, sample_rate = torchaudio.load(audio_path)\n",
+        "    audio_duration = waveform.shape[1] / sample_rate\n",
+        "    num_frames = int(audio_duration * target_fps)\n",
+        "    remainder = num_frames % 16\n",
+        "\n",
+        "    if remainder > 0:\n",
+        "        pad_frames = 16 - remainder\n",
+        "        pad_samples = int((pad_frames / target_fps) * sample_rate)\n",
+        "        pad_waveform = torch.zeros((waveform.shape[0], pad_samples))\n",
+        "        waveform = torch.cat((waveform, pad_waveform), dim=1)\n",
+        "        padded_audio_path = \"padded_audio.wav\"\n",
+        "        torchaudio.save(padded_audio_path, waveform, sample_rate)\n",
+        "    else:\n",
+        "        padded_audio_path = audio_path\n",
+        "\n",
+        "    return padded_audio_path, int((waveform.shape[1] / sample_rate) * target_fps), waveform.shape[1] / sample_rate\n",
+        "\n",
         "video_upload = widgets.FileUpload(accept=\".mp4\", multiple=False, description=\"Upload Video\")\n",
         "audio_upload = widgets.FileUpload(accept=\".wav,.mp3,.aac,.flac\", multiple=False, description=\"Upload Audio\")\n",
         "seed_input = widgets.IntText(value=1247, description=\"Seed:\")\n",
         "num_steps_input = widgets.IntSlider(value=20, min=1, max=100, step=1, description=\"Steps:\")\n",
         "guidance_scale_input = widgets.FloatSlider(value=1.0, min=0.1, max=10.0, step=0.1, description=\"Guidance Scale:\")\n",
         "video_scale_input = widgets.FloatSlider(value=0.5, min=0.1, max=1.0, step=0.1, description=\"Video Scale:\")\n",
+        "output_fps_input = widgets.IntSlider(value=25, min=6, max=60, step=1, description=\"Output FPS:\")\n",
         "width, height = 0, 0\n",
-        "\n",
         "\n",
         "run_button = widgets.Button(description=\"Run Inference\")\n",
         "output_display = widgets.Output()\n",
-        "\n",
-        "def pad_audio_to_multiple_of_16(audio_path, target_fps=25):\n",
-        "    # Load audio\n",
-        "    waveform, sample_rate = torchaudio.load(audio_path)\n",
-        "    audio_duration = waveform.shape[1] / sample_rate  # Duration in seconds\n",
-        "\n",
-        "    # Calculate number of frames at target FPS\n",
-        "    num_frames = int(audio_duration * target_fps)\n",
-        "\n",
-        "    # Pad audio to ensure frame count is a multiple of 16\n",
-        "    remainder = num_frames % 16\n",
-        "    if remainder > 0:\n",
-        "        pad_frames = 16 - remainder\n",
-        "        pad_samples = int((pad_frames / target_fps) * sample_rate)\n",
-        "        pad_waveform = torch.zeros((waveform.shape[0], pad_samples))  # Silence padding\n",
-        "        waveform = torch.cat((waveform, pad_waveform), dim=1)\n",
-        "\n",
-        "        # Save the padded audio\n",
-        "        padded_audio_path = \"padded_audio.wav\"\n",
-        "        torchaudio.save(padded_audio_path, waveform, sample_rate)\n",
-        "    else:\n",
-        "        padded_audio_path = audio_path  # No padding needed\n",
-        "\n",
-        "    # Return the updated number of frames\n",
-        "    padded_duration = waveform.shape[1] / sample_rate\n",
-        "    padded_num_frames = int(padded_duration * target_fps)\n",
-        "\n",
-        "    return padded_audio_path, padded_num_frames\n",
-        "\n",
         "\n",
         "def on_run_button_click(change):\n",
         "    with output_display:\n",
@@ -5993,11 +6018,12 @@
         "            return\n",
         "\n",
         "        video_file_info = next(iter(video_upload.value.values()))\n",
-        "        video_path = video_file_info.get('name', 'uploaded_video.mp4')\n",
+        "        video_path = \"uploaded_video.mp4\"\n",
         "        with open(video_path, \"wb\") as f:\n",
         "            f.write(video_file_info['content'])\n",
         "\n",
-        "        global width, height\n",
+        "\n",
+        "         global width, height\n",
         "        if width <= 0 or height <= 0:\n",
         "            print(\"Setting output video's width & height.\")\n",
         "            import cv2\n",
@@ -6009,20 +6035,35 @@
         "                print(\"Error: Unable to open video file.\")\n",
         "            cap.release()\n",
         "\n",
+        "\n",
         "        audio_file_info = next(iter(audio_upload.value.values()))\n",
-        "        audio_path = audio_file_info.get('name', 'uploaded_audio.mp3')\n",
+        "        audio_path = \"uploaded_audio.mp3\"\n",
         "        with open(audio_path, \"wb\") as f:\n",
         "            f.write(audio_file_info['content'])\n",
         "\n",
-        "        audio_path, num_frames = pad_audio_to_multiple_of_16(audio_path, target_fps=25)\n",
+        "        video_path = convert_video_to_25fps(video_path)\n",
+        "\n",
+        "        audio_path, num_frames, audio_duration = pad_audio_to_multiple_of_16(audio_path, target_fps=25)\n",
+        "\n",
+        "        clip = VideoFileClip(video_path)\n",
+        "        video_duration = clip.duration\n",
+        "\n",
+        "        if audio_duration > video_duration:\n",
+        "            video_path = extend_video(video_path, audio_duration)\n",
+        "        elif video_duration > audio_duration:\n",
+        "            video_path = trim_video(video_path, audio_duration)\n",
+        "\n",
+        "\n",
         "\n",
         "        try:\n",
         "            print(\"Running inference...\")\n",
         "            output_path = \"output_video.mp4\"\n",
         "            perform_inference(video_path, audio_path, seed_input.value, num_steps_input.value, guidance_scale_input.value, output_path)\n",
         "\n",
-        "            from IPython.display import Video\n",
+        "            output_path = convert_video_to_fps(output_path, output_fps_input.value)\n",
+        "\n",
         "            print(\"Inference complete. Displaying output video:\")\n",
+        "\n",
         "            if width <= 0 :\n",
         "                display(Video(output_path, embed=True))\n",
         "            else:\n",
@@ -6030,18 +6071,16 @@
         "\n",
         "            # print(\"Download output video\")\n",
         "            # files.download(output_path)\n",
+        "\n",
         "        finally:\n",
         "            torch.cuda.empty_cache()\n",
-        "            if os.path.exists(video_path):\n",
-        "                os.remove(video_path)\n",
-        "            if os.path.exists(audio_path):\n",
-        "                os.remove(audio_path)\n",
+        "            for file in [video_path, audio_path]:\n",
+        "                if os.path.exists(file):\n",
+        "                    os.remove(file)\n",
         "\n",
         "run_button.on_click(on_run_button_click)\n",
-        "\n",
-        "# Display the UI\n",
-        "widgets_box = widgets.VBox([video_upload, audio_upload, seed_input, num_steps_input, guidance_scale_input, video_scale_input, run_button, output_display])\n",
-        "display(widgets_box)"
+        "widgets_box = widgets.VBox([video_upload, audio_upload, seed_input, num_steps_input, guidance_scale_input, video_scale_input, output_fps_input, run_button, output_display])\n",
+        "display(widgets_box)\n"
       ],
       "metadata": {
         "colab": {
@@ -6163,12 +6202,11 @@
             "8c707e7f8854403aa511752e1ea347a7"
           ]
         },
-        "cellView": "form",
         "id": "XLoD3kfbsfLv",
         "outputId": "b490d12f-ccb3-4baa-81c7-5d40c948dabe",
         "collapsed": true
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
