--- a/LatentSync.ipynb
+++ b/LatentSync.ipynb
@@ -5950,7 +5950,7 @@
         "    clip.write_videofile(output_path, codec=\"libx264\", fps=25, audio_codec=\"aac\")\n",
         "    return output_path\n",
         "\n",
-        "def convert_video_to_fps(video_path, , fps=25, output_path=\"temp_fps.mp4\"):\n",
+        "def convert_video_to_fps(video_path, , fps=25, output_path=\"latentSync_Video.mp4\"):\n",
         "    if fps == 25:\n",
         "        return\n",
         "    clip = VideoFileClip(video_path)\n",
@@ -6063,7 +6063,7 @@
         "            output_path = convert_video_to_fps(output_path, output_fps_input.value)\n",
         "\n",
         "            print(\"Inference complete. Displaying output video:\")\n",
-        "\n",
+        "            from IPython.display import Video\n",
         "            if width <= 0 :\n",
         "                display(Video(output_path, embed=True))\n",
         "            else:\n",
