--- a/LatentSync.ipynb
+++ b/LatentSync.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -12,6 +13,7 @@
     "language_info": {
       "name": "python"
     },
+    "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
         "0d0929a0d1624d93addd21ac966bf577": {
@@ -3119,8 +3121,7 @@
       "cell_type": "code",
       "source": [
         "# @title\n",
-        "# !apt update && apt install ffmpeg -y\n",
-        "!pip install ffmpeg-python\n",
+        "\n",
         "import ipywidgets as widgets\n",
         "import subprocess\n",
         "import torch\n",
