--- a/LatentSync.ipynb
+++ b/LatentSync.ipynb
@@ -3392,7 +3392,7 @@
         "            # files.download(output_path)\n",
         "\n",
         "        finally:\n",
-        "            # torch.cuda.empty_cache()\n",
+        "            torch.cuda.empty_cache()\n",
         "            for file in [video_path, audio_path]:\n",
         "                if os.path.exists(file):\n",
         "                    os.remove(file)\n",
