--- a/LatentSync.ipynb
+++ b/LatentSync.ipynb
@@ -2905,9 +2905,40 @@
         "num_steps_input = widgets.IntSlider(value=20, min=1, max=100, step=1, description=\"Steps:\")\n",
         "guidance_scale_input = widgets.FloatSlider(value=1.0, min=0.1, max=10.0, step=0.1, description=\"Guidance Scale:\")\n",
         "video_scale_input = widgets.FloatSlider(value=0.5, min=0.1, max=1.0, step=0.1, description=\"Video Scale:\")\n",
+        "output_fps_input = widgets.IntSlider(value=25, min=6, max=60, step=1, description=\"Output FPS:\")\n",
         "\n",
         "run_button = widgets.Button(description=\"Run Inference\")\n",
         "output_display = widgets.Output()\n",
+        "\n",
+        "def convert_video_fps(input_path, target_fps):\n",
+        "    if not os.path.exists(input_path) or os.path.getsize(input_path) == 0:\n",
+        "        print(f\"Error: The video file {input_path} is missing or empty.\")\n",
+        "        return None\n",
+        "\n",
+        "    output_path = f\"converted_{target_fps}fps.mp4\"\n",
+        "\n",
+        "    audio_check_cmd = [\n",
+        "        \"ffprobe\", \"-i\", input_path, \"-show_streams\", \"-select_streams\", \"a\",\n",
+        "        \"-loglevel\", \"error\"\n",
+        "    ]\n",
+        "    audio_present = subprocess.run(audio_check_cmd, capture_output=True, text=True).stdout.strip() != \"\"\n",
+        "\n",
+        "    cmd = [\n",
+        "        \"ffmpeg\", \"-y\", \"-i\", input_path,\n",
+        "        \"-filter:v\", f\"fps={target_fps}\",\n",
+        "        \"-c:v\", \"libx264\", \"-preset\", \"fast\", \"-crf\", \"18\",\n",
+        "    ]\n",
+        "\n",
+        "    if audio_present:\n",
+        "        cmd.extend([\"-c:a\", \"aac\", \"-b:a\", \"192k\"])\n",
+        "    else:\n",
+        "        cmd.append(\"-an\")\n",
+        "\n",
+        "    cmd.append(output_path)\n",
+        "\n",
+        "    subprocess.run(cmd, check=True)\n",
+        "    print(f\"Converted video saved as {output_path}\")\n",
+        "    return output_path\n",
         "\n",
         "# def add_silent_frames(audio_path, target_fps=25):\n",
         "\n",
@@ -2922,6 +2953,8 @@
         "#     torchaudio.save(new_audio_path, new_waveform, sample_rate)\n",
         "\n",
         "#     return new_audio_path\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "def pad_audio_to_multiple_of_16(audio_path, target_fps=25):\n",
@@ -3011,6 +3044,8 @@
         "            output_path = \"output_video.mp4\"\n",
         "            perform_inference(video_path, audio_path, seed_input.value, num_steps_input.value, guidance_scale_input.value, output_path)\n",
         "\n",
+        "            output_path = convert_video_fps(output_path, output_fps_input.value)\n",
+        "\n",
         "            from IPython.display import Video\n",
         "            print(\"Inference complete. Displaying output video:\")\n",
         "            display(Video(output_path, embed=True, width=int(width * video_scale_input.value), height=int(height * video_scale_input.value)))\n",
@@ -3027,7 +3062,7 @@
         "widgets_box = widgets.VBox([\n",
         "    image_upload, audio_upload,\n",
         "    seed_input, num_steps_input, guidance_scale_input, video_scale_input,\n",
-        "    run_button, output_display\n",
+        "    output_fps_input, run_button, output_display\n",
         "])\n",
         "display(widgets_box)\n"
       ],
@@ -3132,32 +3167,28 @@
         "\n",
         "\n",
         "def convert_video_fps(input_path, target_fps):\n",
-        "    \"\"\"Converts a video's FPS using FFmpeg. Handles both videos with and without audio.\"\"\"\n",
-        "\n",
         "    if not os.path.exists(input_path) or os.path.getsize(input_path) == 0:\n",
         "        print(f\"Error: The video file {input_path} is missing or empty.\")\n",
         "        return None\n",
         "\n",
         "    output_path = f\"converted_{target_fps}fps.mp4\"\n",
         "\n",
-        "    # Check if the video has an audio stream\n",
         "    audio_check_cmd = [\n",
         "        \"ffprobe\", \"-i\", input_path, \"-show_streams\", \"-select_streams\", \"a\",\n",
         "        \"-loglevel\", \"error\"\n",
         "    ]\n",
         "    audio_present = subprocess.run(audio_check_cmd, capture_output=True, text=True).stdout.strip() != \"\"\n",
         "\n",
-        "    # FFmpeg command\n",
         "    cmd = [\n",
-        "        \"ffmpeg\", \"-y\", \"-i\", input_path,  # Input video\n",
-        "        \"-filter:v\", f\"fps={target_fps}\",  # Apply FPS filter\n",
-        "        \"-c:v\", \"libx264\", \"-preset\", \"fast\", \"-crf\", \"18\",  # Encode video efficiently\n",
+        "        \"ffmpeg\", \"-y\", \"-i\", input_path,\n",
+        "        \"-filter:v\", f\"fps={target_fps}\",\n",
+        "        \"-c:v\", \"libx264\", \"-preset\", \"fast\", \"-crf\", \"18\",\n",
         "    ]\n",
         "\n",
         "    if audio_present:\n",
-        "        cmd.extend([\"-c:a\", \"aac\", \"-b:a\", \"192k\"])  # Preserve audio if present\n",
+        "        cmd.extend([\"-c:a\", \"aac\", \"-b:a\", \"192k\"])\n",
         "    else:\n",
-        "        cmd.append(\"-an\")  # Remove audio (or do nothing if none exists)\n",
+        "        cmd.append(\"-an\")\n",
         "\n",
         "    cmd.append(output_path)\n",
         "\n",
@@ -3171,7 +3202,6 @@
         "        print(f\"Error: The video file {video_path} is missing or empty.\")\n",
         "        return video_path\n",
         "\n",
-        "    # Check if the video has an audio stream\n",
         "    has_audio = False\n",
         "    try:\n",
         "        probe = ffmpeg.probe(video_path, v='error', select_streams='a:0', show_entries='stream=codec_type')\n",
@@ -3180,7 +3210,6 @@
         "        print(f\"Error while probing video: {e}\")\n",
         "        return video_path\n",
         "\n",
-        "    # Use ffmpeg to trim the video\n",
         "    trimmed_video_path = \"trimmed_video.mp4\"\n",
         "    try:\n",
         "        if has_audio:\n",
@@ -3195,11 +3224,7 @@
         "    return trimmed_video_path\n",
         "\n",
         "\n",
-        "import ffmpeg\n",
-        "import os\n",
-        "\n",
         "def has_audio(video_path):\n",
-        "    \"\"\"Checks if a video file has an audio stream.\"\"\"\n",
         "    try:\n",
         "        probe = ffmpeg.probe(video_path, v='error', select_streams='a', show_entries='stream=index')\n",
         "        return len(probe['streams']) > 0\n",
@@ -3207,18 +3232,12 @@
         "        return False\n",
         "\n",
         "def extend_video(video_path, target_duration):\n",
-        "    \"\"\"\n",
-        "    Extends a video by reversing and appending it repeatedly until it reaches the target duration.\n",
-        "    Handles videos with or without audio correctly.\n",
-        "    \"\"\"\n",
         "    if not os.path.exists(video_path) or os.path.getsize(video_path) == 0:\n",
         "        print(f\"Error: The video file {video_path} is missing or empty.\")\n",
         "        return video_path\n",
         "\n",
-        "    # Check if the video has audio\n",
         "    audio_exists = has_audio(video_path)\n",
         "\n",
-        "    # Get the original video duration\n",
         "    try:\n",
         "        probe = ffmpeg.probe(video_path, v='error', select_streams='v:0', show_entries='format=duration')\n",
         "        original_duration = float(probe['format']['duration'])\n",
@@ -3236,22 +3255,19 @@
         "    total_duration = original_duration\n",
         "    extensions = 0\n",
         "\n",
-        "    # Extend the video using reversed clips\n",
         "    while total_duration < target_duration:\n",
         "        extensions += 1\n",
-        "        reversed_clip = reverse_video(clips[-1], audio_exists)  # Ensure reversed video keeps audio state\n",
+        "        reversed_clip = reverse_video(clips[-1], audio_exists)\n",
         "        clips.append(reversed_clip)\n",
-        "        total_duration += original_duration  # Each new clip adds the original duration\n",
+        "        total_duration += original_duration\n",
         "\n",
         "    print(f\"The video was extended {extensions} time(s)\")\n",
         "\n",
-        "    # Concatenate videos using ffmpeg-python\n",
         "    extended_video_path = \"extended_video.mp4\"\n",
         "\n",
         "    try:\n",
         "        inputs = [ffmpeg.input(clip) for clip in clips]\n",
         "\n",
-        "        # Ensure all clips have the same stream setup\n",
         "        if audio_exists:\n",
         "            concat = ffmpeg.concat(*inputs, v=1, a=1).output(extended_video_path, codec=\"libx264\", audio_codec=\"aac\", format=\"mp4\", vcodec=\"libx264\", acodec=\"aac\")\n",
         "        else:\n",
@@ -3262,8 +3278,7 @@
         "        print(f\"Error during video concatenation: {e.stderr.decode()}\")\n",
         "        return video_path\n",
         "\n",
-        "    # Clean up temporary reversed videos\n",
-        "    for clip in clips[1:]:  # Skip original video\n",
+        "    for clip in clips[1:]:\n",
         "        if os.path.exists(clip):\n",
         "            os.remove(clip)\n",
         "\n",
@@ -3271,9 +3286,6 @@
         "\n",
         "\n",
         "def reverse_video(video_path, audio_exists):\n",
-        "    \"\"\"\n",
-        "    Reverses a video using ffmpeg. If the original video has audio, the reversed video keeps the audio.\n",
-        "    \"\"\"\n",
         "    reversed_video_path = f\"reversed_{os.path.basename(video_path)}\"\n",
         "\n",
         "    try:\n",
@@ -3283,15 +3295,12 @@
         "            ffmpeg.input(video_path).output(reversed_video_path, vf='reverse').run(overwrite_output=True)\n",
         "    except ffmpeg.Error as e:\n",
         "        print(f\"Error during video reversal: {e.stderr.decode()}\")\n",
-        "        return video_path  # Return the original video if reversal fails\n",
+        "        return video_path\n",
         "\n",
         "    return reversed_video_path\n",
         "\n",
         "\n",
         "def get_video_duration(video_path):\n",
-        "    \"\"\"\n",
-        "    Returns the duration of the video in seconds.\n",
-        "    \"\"\"\n",
         "    try:\n",
         "        probe = ffmpeg.probe(video_path, v='error', select_streams='v:0', show_entries='format=duration')\n",
         "        return float(probe['format']['duration'])\n",
@@ -3343,7 +3352,6 @@
         "        with open(video_path, \"wb\") as f:\n",
         "            f.write(video_file_info['content'])\n",
         "\n",
-        "\n",
         "        global width, height\n",
         "        if width <= 0 or height <= 0:\n",
         "            print(\"Setting output video's width & height.\")\n",
@@ -3371,6 +3379,10 @@
         "\n",
         "        if audio_duration > video_duration:\n",
         "            video_path = extend_video(video_path, audio_duration)\n",
+        "            video_duration = get_video_duration (video_path)\n",
+        "            if video_duration > audio_duration:\n",
+        "                video_path = trim_video(video_path, audio_duration)\n",
+        "\n",
         "        elif video_duration > audio_duration:\n",
         "            video_path = trim_video(video_path, audio_duration)\n",
         "\n",
