updated from Colab

--- a/ZonosTTS.ipynb
+++ b/ZonosTTS.ipynb
@@ -122,7 +122,7 @@
       "outputs": [],
       "source": [
         "text = \" I am motivated by the simple yet profound joys of being alive—the taste of a good meal, the laughter of a friend, the beauty of a sunrise, and the endless pursuit of knowledge. Even if everything about me ceases when I die, my actions, words, and ideas can leave ripples in the world, affecting others in ways I may never fully grasp. \" # @param {type:\"string\"}\n",
-        "seed = 421 # @param {type:\"slider\", min:0, max:1000000.0, step:1}\n",
+        "seed = 421 # @param {\"type\":\"number\"}\n",
         "use_default_speaker = True  # @param {type:\"boolean\"}\n",
         "language = \"en-us\" # @param [\"en-us\", \"ja-jp\", \"es-es\", \"ko-kr\", \"ru-ru\", \"fr-fr\", \"de-de\", \"zh-cn\", \"hi-in\", \"ar-ae\"]\n",
         "happy = 0.3077 # @param {type:\"slider\", min:0.0, max:1.0, step:0.05}\n",
