Updated from Colab

--- a/ZonosTTS.ipynb
+++ b/ZonosTTS.ipynb
@@ -124,7 +124,7 @@
         "text = \" I am motivated by the simple yet profound joys of being alive—the taste of a good meal, the laughter of a friend, the beauty of a sunrise, and the endless pursuit of knowledge. Even if everything about me ceases when I die, my actions, words, and ideas can leave ripples in the world, affecting others in ways I may never fully grasp. \" # @param {type:\"string\"}\n",
         "seed = 421 # @param {\"type\":\"number\"}\n",
         "use_default_speaker = True  # @param {type:\"boolean\"}\n",
-        "language = \"en-us\" # @param [\"en-us\", \"ja-jp\", \"es-es\", \"ko-kr\", \"ru-ru\", \"fr-fr\", \"de-de\", \"zh-cn\", \"hi-in\", \"ar-ae\"]\n",
+        "language = 'en-us' # @param ['af', 'am', 'an', 'ar', 'as', 'az', 'ba', 'bg', 'bn', 'bpy', 'bs', 'ca', 'cmn', 'cs', 'cy', 'da', 'de', 'el', 'en-029', 'en-gb', 'en-gb-scotland', 'en-gb-x-gbclan', 'en-gb-x-gbcwmd', 'en-gb-x-rp', 'en-us', 'eo', 'es', 'es-419', 'et', 'eu', 'fa', 'fa-latn', 'fi', 'fr-be', 'fr-ch', 'fr-fr', 'ga', 'gd', 'gn', 'grc', 'gu', 'hak', 'hi', 'hr', 'ht', 'hu', 'hy', 'hyw', 'ia', 'id', 'is', 'it', 'ja', 'jbo', 'ka', 'kk', 'kl', 'kn', 'ko', 'kok', 'ku', 'ky', 'la', 'lfn', 'lt', 'lv', 'mi', 'mk', 'ml', 'mr', 'ms', 'mt', 'my', 'nb', 'nci', 'ne', 'nl', 'om', 'or', 'pa', 'pap', 'pl', 'pt', 'pt-br', 'py', 'quc', 'ro', 'ru', 'ru-lv', 'sd', 'shn', 'si', 'sk', 'sl', 'sq', 'sr', 'sv', 'sw', 'ta', 'te', 'tn', 'tr', 'tt', 'ur', 'uz', 'vi', 'vi-vn-x-central', 'vi-vn-x-south', 'yue']\n",
         "happy = 0.3077 # @param {type:\"slider\", min:0.0, max:1.0, step:0.05}\n",
         "sad = 0.0256 # @param {type:\"slider\", min:0.0, max:1.0, step:0.05}\n",
         "disgust = 0.0256 # @param {type:\"slider\", min:0.0, max:1.0, step:0.05}\n",
@@ -133,7 +133,9 @@
         "anger = 0.0256 # @param {type:\"slider\", min:0.0, max:1.0, step:0.05}\n",
         "other = 0.2564 # @param {type:\"slider\", min:0.0, max:1.0, step:0.05}\n",
         "neutral = 0.3077 # @param {type:\"slider\", min:0.0, max:1.0, step:0.05}\n",
+        "pitch = 20 # @param {type:\"slider\", min:0, max:400, step:1}\n",
         "speed = 15 # @param {type:\"slider\", min:0.0, max:40.0, step:1.0}\n",
+        "\n",
         "\n",
         "total = happy + sad + disgust + fear + surprise + anger + other + neutral\n",
         "if total > 0:\n",
@@ -155,7 +157,7 @@
         "    print(\"Default audio loaded!\")\n",
         "\n",
         "\n",
-        "def generate_speech2( text, seed = 421, language=\"en-us\", emotion_tensor= torch.tensor(list(map(float, [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0])), device=device)):\n",
+        "def generate_speech2( text, seed = 421, language=\"en-us\", emotion_tensor= torch.tensor(list(map(float, [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0])), device=device), pitch= 20, speed= 15):\n",
         "    \"\"\"Generate speech from text\"\"\"\n",
         "    print(f\"Generating: {text}\")\n",
         "\n",
@@ -170,6 +172,7 @@
         "        language=language,\n",
         "        speaker=speaker,\n",
         "        emotion=emotion_tensor,\n",
+        "        pitch_std = pitch,\n",
         "        speaking_rate=speed\n",
         "\n",
         "    )\n",
@@ -184,7 +187,7 @@
         "    torchaudio.save(filename, wavs[0], model.autoencoder.sampling_rate)\n",
         "    return filename\n",
         "\n",
-        "output_file = generate_speech2(text, seed = seed, language=language, emotion_tensor= emotions)\n",
+        "output_file = generate_speech2(text, seed = seed, language=language, emotion_tensor= emotions, pitch = pitch, speed = speed)\n",
         "from IPython.display import Audio\n",
         "Audio(output_file)"
       ]
