Updated from Colab

--- a/ZonosTTS.ipynb
+++ b/ZonosTTS.ipynb
@@ -24,29 +24,8 @@
         "!git clone https://github.com/Isi-dev/Zonos.git\n",
         "%cd Zonos\n",
         "!pip install -e .\n",
-        "!pip install --no-build-isolation -e .[compile] # optional but needed to run the hybrid"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**DOWNLOAD MODELS**"
-      ],
-      "metadata": {
-        "id": "nvB9W8c_ME76"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "29n32l7X_cAb",
-        "collapsed": true,
-        "cellView": "form"
-      },
-      "outputs": [],
-      "source": [
-        "# @title\n",
+        "# !pip install --no-build-isolation -e .[compile] # optional but needed to run the hybrid\n",
+        "\n",
         "import torch\n",
         "import torchaudio\n",
         "from zonos.model import Zonos\n",
