Updated from Colab

--- a/Wan2_1_T2V_1_3B_DiffSynth.ipynb
+++ b/Wan2_1_T2V_1_3B_DiffSynth.ipynb
@@ -144,6 +144,69 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**RUN TEXT TO IMAGE**"
+      ],
+      "metadata": {
+        "id": "z92WKT5b-1et"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = \"A highly detailed, realistic AI-generated portrait of a very beautiful female soldier representing Canada. She has long hair, a confident and friendly smile, and striking facial features. She is wearing a camouflage military uniform with an open front, revealing her huge cleavage. She holds a modern assault rifle in a relaxed yet ready position. The background shows a slightly blurred battlefield with other soldiers in formation, creating a sense of military action. The Canadian flag is displayed on her uniform on her shoulder. The lighting is natural, with a warm and slightly cinematic tone. The image should have a sharp focus on her face and outfit while maintaining a professional military aesthetic.\" # @param {type:\"string\"}\n",
+        "sample_steps = 30 # @param {\"type\":\"number\"}\n",
+        "Instruction = \"choose from '720*1280', '1280*720', '480*832', '832*480', '1024*1024 for Width & Height\" # @param {\"type\":\"string\"}\n",
+        "width = 720 # @param {\"type\":\"number\"}\n",
+        "height = 1280 # @param {\"type\":\"number\"}\n",
+        "seed = 48 # @param {\"type\":\"number\"}\n",
+        "displayWidth = 480 # @param {\"type\":\"number\"}\n",
+        "\n",
+        "# Generate video from text prompt\n",
+        "video = pipe(\n",
+        "    prompt=prompt,\n",
+        "    negative_prompt=\"色调艳丽，过曝，静态，细节模糊不清，字幕，风格，作品，画作，画面，静止，整体发灰，最差质量，低质量，JPEG压缩残留，丑陋的，残缺的，多余的手指，画得不好的手部，画得不好的脸部，畸形的，毁容的，形态畸形的肢体，手指融合，静止不动的画面，杂乱的背景，三条腿，背景人很多，倒着走\",\n",
+        "    height = height,\n",
+        "    width = width,\n",
+        "    num_frames=1,\n",
+        "    num_inference_steps=sample_steps,\n",
+        "    seed=seed, tiled=True\n",
+        ")\n",
+        "\n",
+        "# Save the generated video\n",
+        "save_video(video, \"vid.mp4\", fps=15, quality=5)\n",
+        "\n",
+        "import cv2\n",
+        "import os\n",
+        "from IPython.display import display as displayVid, Image as outImg\n",
+        "\n",
+        "def show_image(video_path, display_width=480):\n",
+        "    if not os.path.exists(video_path):\n",
+        "        print(f\"Error: {video_path} not found!\")\n",
+        "        return\n",
+        "\n",
+        "    cap = cv2.VideoCapture(video_path)\n",
+        "    success, frame = cap.read()\n",
+        "    cap.release()\n",
+        "\n",
+        "    if success:\n",
+        "        image_path = \"single_frame.png\"\n",
+        "        cv2.imwrite(image_path, frame)\n",
+        "        displayVid(outImg(image_path, width=display_width))\n",
+        "    else:\n",
+        "        print(\"Error: Could not read the frame.\")\n",
+        "\n",
+        "show_image(\"vid.mp4\", display_width=displayWidth)\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "SRIWM1Ir-6R8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**RUN VIDEO TO VIDEO**(Experimental)"
       ],
       "metadata": {
