Updated from Colab

--- a/Wan2_1_I2V_14B.ipynb
+++ b/Wan2_1_I2V_14B.ipynb
@@ -26,6 +26,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "You can set `parameters_in_vram` to 9 or less to reduce the VRAM required, especially if you want to generate a video with a resolution greater than 480 by 832 or 832 by 480. The VRAM used depends on this value and the resolutions of the input image and output video."
+      ],
+      "metadata": {
+        "id": "wC_tqstYe52w"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -72,11 +81,12 @@
         "        \"models/Wan-AI/Wan2.1-I2V-14B-480P/models_t5_umt5-xxl-enc-bf16.safetensors\",\n",
         "        \"models/Wan-AI/Wan2.1-I2V-14B-480P/Wan2.1_VAE.safetensors\",\n",
         "    ],\n",
-        "    torch_dtype=torch.torch.bfloat16, # You can set `torch.float8_e4m3fn` or `torch_dtype=torch.bfloat16` to disable FP8 quantization.\n",
+        "    torch_dtype=torch.torch.bfloat16, # You can set `torch_dtype=torch.float8_e4m3fn` or `torch_dtype=torch.bfloat16` to disable FP8 quantization.\n",
         ")\n",
         "\n",
         "pipe = WanVideoPipeline.from_model_manager(model_manager, torch_dtype=torch.bfloat16, device=\"cuda\")\n",
-        "pipe.enable_vram_management(num_persistent_param_in_dit=15*10**9) # You can set `num_persistent_param_in_dit` to a small number to reduce VRAM required.\n",
+        "parameters_in_vram = 14 # @param {\"type\":\"number\"}\n",
+        "pipe.enable_vram_management(num_persistent_param_in_dit=parameters_in_vram*10**9) # You can set `num_persistent_param_in_dit` to a small number to reduce VRAM required.\n",
         "print(\"✅ All models loaded successfully!\")"
       ]
     },
@@ -100,7 +110,8 @@
         "image_path = list(uploaded.keys())[0]\n",
         "image = Image.open(image_path)\n",
         "\n",
-        "print(\"✅Image loaded successfully:\", image.size)"
+        "print(\"✅Image loaded successfully:\", image.size)\n",
+        "\n"
       ],
       "metadata": {
         "cellView": "form",
@@ -125,7 +136,7 @@
         "\n",
         "prompt = \"The camera tracks the lady and turns around her as she walks and smiles.\" # @param {type:\"string\"}\n",
         "sample_steps = 30 # @param {\"type\":\"number\"}\n",
-        "Instruction = \"choose from '720*1280', '1280*720', '480*832', '832*480', '1024*1024 for width & height, and your input image should be of the same resolution as your selected width & height.\" # @param {\"type\":\"string\"}\n",
+        "Instruction = \"choose from '720*1280', '1280*720', '480*832', '832*480', '1024*1024 for width & height.\" # @param {\"type\":\"string\"}\n",
         "width = 480 # @param {\"type\":\"number\"}\n",
         "height = 832 # @param {\"type\":\"number\"}\n",
         "# num_frames = 1 # @param {\"type\":\"number\"}\n",
