Updated from Colab

--- a/Wan2_1_I2V_14B.ipynb
+++ b/Wan2_1_I2V_14B.ipynb
@@ -28,7 +28,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "You can set `parameters_in_vram` to 9 or less to reduce the VRAM required, especially if you want to generate a video with a resolution greater than 480 by 832 or 832 by 480. The VRAM used depends on this value and the resolutions of the input image and output video."
+        "- You can set **parameters_in_vram** to 10 or less to reduce the VRAM used, especially if you want to generate a video with a resolution greater than 480 by 832 or 832 by 480. The VRAM used depends on the value of **parameters_in_vram** and the resolutions of the input image & output video.\n",
+        "- Setting **parameters_in_vram** to 15 with a video resolution of 480 by 832 will result in a generation time of approximately 10 minutes. Lower values of **parameters_in_vram** will result in longer generation times. Higher values can reduce the video generation time, but increase the risk of getting **Out of Memory Error**s."
       ],
       "metadata": {
         "id": "wC_tqstYe52w"
@@ -136,7 +137,7 @@
         "\n",
         "prompt = \"The camera tracks the lady and turns around her as she walks and smiles.\" # @param {type:\"string\"}\n",
         "sample_steps = 30 # @param {\"type\":\"number\"}\n",
-        "Instruction = \"choose from '720*1280', '1280*720', '480*832', '832*480', '1024*1024 for width & height.\" # @param {\"type\":\"string\"}\n",
+        "Instruction = \"choose from '720*1280', '1280*720', '480*832', '832*480', '1024*1024 for output video's width & height.\" # @param {\"type\":\"string\"}\n",
         "width = 480 # @param {\"type\":\"number\"}\n",
         "height = 832 # @param {\"type\":\"number\"}\n",
         "# num_frames = 1 # @param {\"type\":\"number\"}\n",
