Updated from colab to include the num_frames parameter.

--- a/Wan2_1_I2V_14B.ipynb
+++ b/Wan2_1_I2V_14B.ipynb
@@ -135,12 +135,12 @@
       "source": [
         "\n",
         "\n",
-        "prompt = \"The camera tracks the lady and turns around her as she walks and smiles.\" # @param {type:\"string\"}\n",
+        "prompt = \"The lady smiles and waves at the camera.\" # @param {type:\"string\"}\n",
         "sample_steps = 30 # @param {\"type\":\"number\"}\n",
         "Instruction = \"choose from '720*1280', '1280*720', '480*832', '832*480', '1024*1024 for output video's width & height.\" # @param {\"type\":\"string\"}\n",
         "width = 480 # @param {\"type\":\"number\"}\n",
         "height = 832 # @param {\"type\":\"number\"}\n",
-        "# num_frames = 1 # @param {\"type\":\"number\"}\n",
+        "num_frames = 81 # @param {\"type\":\"number\"}\n",
         "seed = 1 # @param {\"type\":\"number\"}\n",
         "\n",
         "# Generate video from text prompt and Image\n",
@@ -150,7 +150,7 @@
         "    input_image=image,\n",
         "    height = height,\n",
         "    width = width,\n",
-        "    num_frames=81,\n",
+        "    num_frames=num_frames,\n",
         "    num_inference_steps=sample_steps,\n",
         "    seed=seed, tiled=True\n",
         ")\n",
